--- a/emi_schedule/build.gradle
+++ b/emi_schedule/build.gradle
@@ -64,16 +64,13 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
- 
-    // https://mvnrepository.com/artifact/com.google.code.gson/gson
-implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
-    // https://mvnrepository.com/artifact/javax.validation/validation-api
-implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
+    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+    implementation 'io.springfox:springfox-swagger2:2.9.2'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.3'
 
-// https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
-implementation 'io.springfox:springfox-swagger-ui:2.9.2'
-// https://mvnrepository.com/artifact/io.springfox/springfox-swagger2
-implementation 'io.springfox:springfox-swagger2:2.9.2'
+
 
 }
 
