--- a/emi_schedule/src/main/resources/application.properties
+++ b/emi_schedule/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+management.server.port=8088
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
